--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
           <div class="main-menu">
                 <ul>
-                  <li><a href="#">Главная</a></li>
-                  <li><a href="#">Товари</a></li>
-                  <li><a href="#">О_нас</a></li>
-                  <li><a href="#">Контакти</a></li>
+                  <li class="main-menu_button"><a href="#">Главная</a></li>
+                  <li class="main-menu_button_active"><a href="#">Товари</a></li>
+                  <li class="main-menu_button"><a href="#">О_нас</a></li>
+                  <li class="main-menu_button"><a href="#">Контакти</a></li>
                 </ul>
           </div>
         </header>
@@ -28,12 +28,12 @@
         <aside class="sidebar">
           <div class="page-menu">
             <ul>
-                  <li><a href="#">Ноутбуки</a></li>
-                  <li><a href="#">Планшеты</a></li>
-                  <li><a href="#">Телефоны</a></li>
-                  <li><a href="#">Телевизоры</a></li>
-                  <li><a href="#">Бытовая техника</a></li>
-                  <li><a href="#">Автотовари</a></li>
+                  <li class="page-menu_botton"><a href="#">Ноутбуки</a></li>
+                  <li class="page-menu_botton"><a href="#">Планшеты</a></li>
+                  <li class="page-menu_botton_active"><a href="#">Телефоны</a></li>
+                  <li class="page-menu_botton"><a href="#">Телевизоры</a></li>
+                  <li class="page-menu_botton"><a href="#">Бытовая техника</a></li>
+                  <li class="page-menu_botton"><a href="#">Автотовари</a></li>
             </ul>
           </div>
         </aside>
@@ -51,20 +51,17 @@
         </div>
       </main>
 
-
-
         <footer class="footer">
             <div class="nav">
               <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Товары</a></li>
-                <li><a href="#">О_нас</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li class="nav_botton"><a href="#">Главная</a></li>
+                <li class="nav_botton_active"><a href="#">Товары</a></li>
+                <li class="nav_botton"><a href="#">О_нас</a></li>
+                <li class="nav_botton"><a href="#">Контакты</a></li>
               </ul>
               <div class="author">2014 &copy; All rights reserved</div>
             </div>
         </footer>
-
       </div>
     </body>
 </html>
