--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
     <main class="main">
         <aside class="sidebar">
-          <div class="page-menu">
+
             <ul>
-                  <li class="page-menu_botton"><a href="#">Ноутбуки</a></li>
-                  <li class="page-menu_botton"><a href="#">Планшеты</a></li>
-                  <li class="page-menu_botton_active"><a href="#">Телефоны</a></li>
-                  <li class="page-menu_botton"><a href="#">Телевизоры</a></li>
-                  <li class="page-menu_botton"><a href="#">Бытовая техника</a></li>
-                  <li class="page-menu_botton"><a href="#">Автотовари</a></li>
+                  <li class="sidebar_botton"><a href="#">Планшеты</a></li>
+                  <li class="sidebar_botton"><a href="#">Ноутбуки</a></li>
+                  <li class="sidebar_active"><a href="#">Телефоны</a></li>
+                  <li class="sidebar_botton"><a href="#">Телевизоры</a></li>
+                  <li class="sidebar_botton"><a href="#">Бытовая техника</a></li>
+                  <li class="sidebar_botton"><a href="#">Автотовари</a></li>
             </ul>
-          </div>
+
         </aside>
 
         <div class="content">
@@ -52,15 +52,15 @@
       </main>
 
         <footer class="footer">
-            <div class="nav">
+
               <ul>
                 <li class="nav_botton"><a href="#">Главная</a></li>
-                <li class="nav_botton_active"><a href="#">Товары</a></li>
+                <li class="nav_active"><a href="#">Товары</a></li>
                 <li class="nav_botton"><a href="#">О_нас</a></li>
                 <li class="nav_botton"><a href="#">Контакты</a></li>
               </ul>
               <div class="author">2014 &copy; All rights reserved</div>
-            </div>
+
         </footer>
       </div>
     </body>
